/*
Copyright 2019-present Open Networking Foundation.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

// Package xapp defines the interior gRPC interfaces for xApps to interact with E2T.
package onos.e2t.xapp;

import "google/protobuf/duration.proto";

message E2Control {
    // Request encoding format (ASN.1 or Protobuf)
    // Add subscriptions
    // Remove subscriptions
    // Send control/insert/policy/query messages to specific device
}


message E2Message {
    // ID of E2 node that sent the message
    string e2node = 1;
    // Service model ID
    string service_model = 2;

    // Message data (encoded as ASN.1 or Protobuf)
    bytes payload = 3;
}

// E2TService provides means for enhanced interactions with the ONOS RIC E2 Termination service.
service E2TService {
    // List of registered/available SMs

    // RegisterApp establishes a bi-directional stream for conducting interactions with the E2 nodes in the RAN environment.
    rpc RegisterApp(stream E2Control) returns (stream E2Message);
}
